--- a/src/app/components/home/register/register.component.css
+++ b/src/app/components/home/register/register.component.css
@@ -23,7 +23,7 @@
 
 .derecha {
     display: grid;
-    grid-template-rows: 0.5fr 0.5fr 0.5fr;
+    grid-template-rows: 0.1fr 1.5fr;
     
 }
 
@@ -63,6 +63,11 @@
 .formulario {
     display: flex;
     flex-direction: column;
+}
+
+.fila-formulario {
+    display: flex;
+    flex-direction: row;
 }
 
 .desplegable {
