Arreglos login y registro

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -33,7 +33,7 @@
       </form>
     </div>
     <div class="der-abajo">
-      <p>¿No tienes cuenta? <a href="/home/register">Regístrate</a></p>
+      <p style="margin-top: 5%;">¿No tienes cuenta? <a href="/home/register">Regístrate</a></p>
       <button mat-flat-button color="primary" style="margin-bottom: 2%;" (click)="loginGuest()">Entrar como invitado</button>
       <button class="login-with-google-btn" style="margin-bottom: 2%;" #loginRef>Sign up with Google</button>
     </div>
