--- a/src/app/components/home/register/register.component.html
+++ b/src/app/components/home/register/register.component.html
@@ -165,7 +165,7 @@
                 </mat-select>
 
                 <button mat-flat-button color="primary" (click)="register()">Register</button>
-                <p style="margin-top: 5%;">Tengo cuenta: <a href="/home">Iniciar sesión</a></p>
+                <p style="margin-top: 5%;">¿Tienes cuenta?: <a href="/home">Inicia sesión</a></p>
             </form>
         </div>
     </div>
