--- a/src/app/components/admin/sidebar/denuncias-del-foro/denuncias-del-foro.component.css
+++ b/src/app/components/admin/sidebar/denuncias-del-foro/denuncias-del-foro.component.css
@@ -32,3 +32,7 @@
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 4;
 }
+
+@media only screen and (max-width: 1200px) {
+    .post-content { -webkit-line-clamp: 2; }
+}
