--- a/src/app/components/admin/sidebar/sidebar.component.html
+++ b/src/app/components/admin/sidebar/sidebar.component.html
@@ -6,10 +6,10 @@
 -->
 <mat-sidenav-container class="example-container">
     <mat-sidenav #sidenav1 mode="side" class="example-sidenav2" fixedInViewport="true" fixedTopGap="0"
-        fixedBottomGap="0">
+        fixedBottomGap="0" (window:resize)='onResize($event)'>
         <mat-grid-list cols="1" rowHeight="7%">
             <mat-grid-tile colspan="1"><mat-icon color="accent" class="icon" (click)="sidenav.open()"
-                    (click)="sidenav1.close()" (click)="toggle()">menu</mat-icon></mat-grid-tile>
+                    (click)="sidenav1.close()">menu</mat-icon></mat-grid-tile>
             <mat-grid-tile colspan="1"></mat-grid-tile>
             <mat-grid-tile colspan="1"></mat-grid-tile>
             <mat-grid-tile colspan="1"></mat-grid-tile>
@@ -27,10 +27,10 @@
         fixedBottomGap="0">
 
         <mat-grid-list cols="7" rowHeight="8%">
-            <mat-grid-tile colspan="2"><mat-icon color="accent" (click)="sidenav.close()" (click)="sidenav1.open()"
-                    (click)="toggle()">menu</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="2"><mat-icon color="accent" (click)="sidenav.close()"
+                    (click)="sidenav1.open()" class="menu">menu</mat-icon></mat-grid-tile>
             <mat-grid-tile colspan="3"></mat-grid-tile>
-            <mat-grid-tile colspan="2"><mat-icon color="accent" routerLink="/admin/sidebar/notificaciones">notifications</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="2"></mat-grid-tile>
 
             <mat-grid-tile colspan="7" rowspan="2" routerLink="/admin/sidebar/perfil">
                 <img mat-sm-image src="./assets/img/badge1.png" alt="Foto de perfil" style="height: 90%;">
@@ -38,42 +38,42 @@
 
             <mat-grid-tile colspan="7" rowspan="1">
                 <p class="usuario">Administrador</p>
-                <!-- <img mat-sm-image class="insignia" src="./assets/img/badge1.png" alt="Foto de perfil">
-                <img mat-sm-image class="insignia" src="./assets/img/badge1.png" alt="Foto de perfil">
-                <img mat-sm-image class="insignia" src="./assets/img/badge1.png" alt="Foto de perfil">
-                <p class="reputacion">Reputación: 256</p> -->
             </mat-grid-tile>
 
-            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/contact-us-de-usuario"><mat-icon color="accent">forum</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/contact-us-de-usuario"><mat-icon
+                    color="accent">forum</mat-icon></mat-grid-tile>
             <mat-grid-tile colspan="6" mat-align="start" routerLink="/admin/sidebar/contact-us-de-usuario">
                 <p class="opcion-text">Contact us de usuario</p>
             </mat-grid-tile>
 
-            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/denuncias-del-foro"><mat-icon color="accent">warning</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/denuncias-del-foro"><mat-icon
+                    color="accent">warning</mat-icon></mat-grid-tile>
             <mat-grid-tile colspan="6" mat-align="start" routerLink="/admin/sidebar/denuncias-del-foro">
                 <p class="opcion-text">Denuncias del foro</p>
             </mat-grid-tile>
 
-            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/gestion-de-usuarios"><mat-icon color="accent">supervisor_account</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/gestion-de-usuarios"><mat-icon
+                    color="accent">supervisor_account</mat-icon></mat-grid-tile>
             <mat-grid-tile colspan="6" mat-align="start" routerLink="/admin/sidebar/gestion-de-usuarios">
                 <p class="opcion-text">Gestión de usuarios</p>
             </mat-grid-tile>
 
-            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/estadisticas"><mat-icon color="accent">bar_chart</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/estadisticas"><mat-icon
+                    color="accent">bar_chart</mat-icon></mat-grid-tile>
             <mat-grid-tile colspan="6" mat-align="left" routerLink="/admin/sidebar/estadisticas">
                 <p class="opcion-text">Estadísticas</p>
             </mat-grid-tile>
 
             <mat-grid-tile colspan="7" rowspan="3"></mat-grid-tile>
 
-            <mat-grid-tile colspan="1" routerLink=""><mat-icon color="accent">logout</mat-icon></mat-grid-tile>
-            <mat-grid-tile colspan="6">
+            <mat-grid-tile colspan="1" routerLink="/home"><mat-icon color="accent">logout</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="6" routerLink="/home">
                 <p class="opcion-text">Cerrar sesión</p>
             </mat-grid-tile>
         </mat-grid-list>
     </mat-sidenav>
 
-    <mat-sidenav-content class="example-sidenav-content" [style.margin-left.%]="margen">
+    <mat-sidenav-content class="example-sidenav-content">
         <router-outlet></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
