Actualización del admin (integración backend)
- Contact us
	- Responder sugerencia
- Gestión de usuario
	- Estado del usuario
- Sidebar

--- a/src/app/components/admin/sidebar/gestion-de-usuarios/gestion-de-usuarios.component.css
+++ b/src/app/components/admin/sidebar/gestion-de-usuarios/gestion-de-usuarios.component.css
@@ -114,6 +114,16 @@
     display: flex;
 }
 
+.estado-cuerpo {
+    display: grid;
+    grid-template-columns: 2fr 0.5fr;
+}
+
+.partes {
+    display: flex;
+    justify-content: center;
+}
+
 /* Movil */
 @media only screen and (max-width: 600px) {
     .correo { display: none; }
