--- a/src/app/components/admin/sidebar/contact-us-de-usuario/contact-us-de-usuario.component.html
+++ b/src/app/components/admin/sidebar/contact-us-de-usuario/contact-us-de-usuario.component.html
@@ -51,7 +51,7 @@
         </mat-card-content>
         <mat-card-actions align="end">
           <button mat-flat-button color="warn" (click)="rechazar(contact.id)">Rechazar</button>
-          <button mat-flat-button color="primary">Responder</button>
+          <button mat-flat-button color="primary" (click)="openDialogResponderSugerencia('0ms', '0ms',contact.id, contact.tipo, contact.info)">Responder</button>
         </mat-card-actions>
       </mat-card>
     </mat-grid-tile>
