--- a/src/app/components/admin/sidebar/sidebar.component.html
+++ b/src/app/components/admin/sidebar/sidebar.component.html
@@ -32,7 +32,7 @@
             <mat-grid-tile colspan="3"></mat-grid-tile>
             <mat-grid-tile colspan="2"></mat-grid-tile>
 
-            <mat-grid-tile colspan="7" rowspan="2" routerLink="/admin/sidebar/perfil">
+            <mat-grid-tile colspan="7" rowspan="2">
                 <img mat-sm-image src="./assets/img/badge1.png" alt="Foto de perfil" style="height: 90%;">
             </mat-grid-tile>
 
