--- a/src/app/components/admin/sidebar/denuncias-del-foro/denuncias-del-foro.component.html
+++ b/src/app/components/admin/sidebar/denuncias-del-foro/denuncias-del-foro.component.html
@@ -32,7 +32,7 @@
         <mat-card-content style="color: white;" class="post-content">{{ denuncia.descripcion }}</mat-card-content>
         <mat-card-actions align="end">
           <button mat-flat-button color="warn" (click)="rechazar(denuncia.id)">Rechazar</button>
-          <button mat-flat-button color="primary">Más detalles</button>
+          <button mat-flat-button color="primary" (click)="openDialogMasDestalles('0ms', '0ms', denuncia.id, denuncia.tipo, denuncia.descripcion, denuncia.referencia)">Más detalles</button>
         </mat-card-actions>
       </mat-card>
     </mat-grid-tile>
