--- a/src/app/components/admin/sidebar/contact-us-de-usuario/contact-us-de-usuario.component.html
+++ b/src/app/components/admin/sidebar/contact-us-de-usuario/contact-us-de-usuario.component.html
@@ -6,7 +6,7 @@
   Cuenta con un dropdown para seleccionar el tipo de mensaje que se desea visualizar.
 -->
 <div class="fijo">
-  <mat-grid-list cols="11" rowHeight="2:1">
+  <mat-grid-list cols="11" [rowHeight]="rowHeightTit">
     <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;"
         (click)="goBack()">arrow_back_ios</mat-icon></mat-grid-tile>
     <mat-grid-tile colspan="9">
@@ -18,7 +18,7 @@
 </div>
 
 <div class="desplazable">
-  <mat-grid-list cols="5" rowHeight="2:1">
+  <mat-grid-list cols="6" [rowHeight]="rowHeightBusc" class="barra">
     <mat-grid-tile colspan="3">
       <mat-form-field style="width: 100%;">
         <mat-label>Selección</mat-label>
@@ -32,7 +32,9 @@
     </mat-grid-tile>
   </mat-grid-list>
 
-  <mat-grid-list cols="2" rowHeight="2.5:1">
+  <mat-paginator [length]="contacts.length" [pageSize]="pageSize" (page)="getPaginatorData($event)"></mat-paginator>
+
+  <mat-grid-list [cols]="numCols" [rowHeight]="rowHeight" (window:resize)='onResize($event)'>
     <mat-grid-tile *ngFor="let contact of contacts">
       <mat-card class="post">
         <mat-card-header>
@@ -56,4 +58,7 @@
       </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
+
+  <mat-paginator [length]="contacts.length" [pageSize]="pageSize" (page)="getPaginatorData($event)"></mat-paginator>
+
 </div>
