--- a/src/app/components/admin/sidebar/gestion-de-usuarios/gestion-de-usuarios.component.html
+++ b/src/app/components/admin/sidebar/gestion-de-usuarios/gestion-de-usuarios.component.html
@@ -8,7 +8,7 @@
     modificar el estado del usuario.
 -->
 <div class="fijo">
-    <mat-grid-list cols="11" rowHeight="2:1">
+    <mat-grid-list cols="11" [rowHeight]="rowHeightTit" (window:resize)='onResize($event)'>
         <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;"
                 (click)="goBack()">arrow_back_ios</mat-icon></mat-grid-tile>
         <mat-grid-tile colspan="9">
@@ -31,6 +31,8 @@
             </mat-form-field>
         </mat-grid-tile>
     </mat-grid-list>
+
+    <mat-paginator [length]="users.length" [pageSize]="pageSize" (page)="getPaginatorData($event)"></mat-paginator>
 
     <div class="tabla">
         <div class="cabecera">
@@ -88,4 +90,6 @@
             </ng-container>
         </div>
     </div>
+
+    <mat-paginator [length]="users.length" [pageSize]="pageSize" (page)="getPaginatorData($event)"></mat-paginator>
 </div>
