--- a/src/app/components/admin/sidebar/estadisticas/estadisticas.component.css
+++ b/src/app/components/admin/sidebar/estadisticas/estadisticas.component.css
@@ -19,3 +19,12 @@
     width: 100%;
     margin: 20px 0;
 }
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.ranking {
+    max-width: 100%;
+}
