--- a/src/app/components/user/sidebar/foro/foro.component.html
+++ b/src/app/components/user/sidebar/foro/foro.component.html
@@ -1,5 +1,5 @@
 <div class="fijo">
-    <mat-grid-list cols="11" rowHeight="2:1">
+    <mat-grid-list cols="11" [rowHeight]="rowHeightTit" (window:resize)='onResize($event)'>
         <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;" (click)="goBack()">arrow_back_ios</mat-icon></mat-grid-tile>
         <mat-grid-tile colspan="9"><h1 class="title" style="margin-top: 3%;">FORO</h1></mat-grid-tile>
     </mat-grid-list>
