--- a/src/app/components/user/sidebar/notificaciones/notificaciones.component.html
+++ b/src/app/components/user/sidebar/notificaciones/notificaciones.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="11" rowHeight="2:1">
+<mat-grid-list cols="11" [rowHeight]="rowHeightTit">
     <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;"
             (click)="goBack()">arrow_back_ios</mat-icon></mat-grid-tile>
     <mat-grid-tile colspan="9">
