--- a/src/app/components/user/sidebar/perfil/estadisticas/estadisticas.component.html
+++ b/src/app/components/user/sidebar/perfil/estadisticas/estadisticas.component.html
@@ -1,4 +1,5 @@
 <div class="desplazable">
+    <button mat-flat-button color="primary">Refrescar</button>
     <div id="chart">
         <div class="grid">
             <div class="ranking">
