--- a/src/app/components/user/sidebar/sidebar.component.html
+++ b/src/app/components/user/sidebar/sidebar.component.html
@@ -65,7 +65,7 @@
             <mat-grid-tile colspan="1"></mat-grid-tile>
             <mat-grid-tile colspan="1" routerLink="/sidebar/piso/mapa"><mat-icon
                     color="accent">map</mat-icon></mat-grid-tile>
-            <mat-grid-tile colspan="5" mat-align="start" routerLink="/sidebar/piso/mapa">
+            <mat-grid-tile colspan="5" mat-align="start" routerLink="/sidebar/mapa">
                 <p class="opcion-text">Mapa</p>
             </mat-grid-tile>
 
