--- a/src/app/components/user/sidebar/mapa/mapa.component.html
+++ b/src/app/components/user/sidebar/mapa/mapa.component.html
@@ -9,5 +9,5 @@
 <hr class="linea-title">
 
 <div class="desplazable">
-    <router-outlet></router-outlet>
+    <div id="map" style="height: 80vh;"></div>
 </div>
